# kabosu-core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-ko.txt  requirements.txt  test.py
apps/Daisuki-Bert-VITS2/: README.md  app.py  preprocess_all.py  requirements-colab.txt  requirements-infer.txt  requirements-minimal.txt  requirements.txt
apps/DaisukiTTS-engine/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  engine_manifest.json  pyproject.toml  requirements-onnx.txt  run.py  run.spec
apps/DaisukiTTS-engine/.github/ISSUE_TEMPLATE/: bugreport.md  featurerequest.md  question.md
apps/DaisukiTTS-engine/.github/actions/prepare_python/: action.yml
apps/DaisukiTTS-engine/.github/workflows/: build-docs.yml  build-engine-container.yml  build-engine-package.yml  build-latest-dev.yml  sentry.yml  test-engine-container.yml  test-engine-package.yml  test-issue-freshness.yml  test-merge-gatekeeper.yml  test-security.yml  test.yml
apps/DaisukiTTS-engine/.serena/: project.yml
apps/DaisukiTTS-engine/resources/: setting_ui_template.html
apps/DaisukiTTS-engine/resources/engine_manifest_assets/: dependency_licenses.json  terms_of_service.md
apps/DaisukiTTS-engine/test/: __init__.py
apps/DaisukiTTS-engine/test/benchmark/: engine_preparation.py
apps/DaisukiTTS-engine/test/e2e/: conftest.py  test_characters.py  test_missing_core.py  test_sing.py  test_tts.py
apps/DaisukiTTS-engine/test/e2e/__snapshots__/test_openapi/: test_OpenAPIの形が変わっていないことを確認.json
apps/DaisukiTTS-engine/test/e2e/single_api/engine_info/: test_engine_manifest.py  test_supported_devices.py
apps/DaisukiTTS-engine/test/e2e/single_api/engine_info/__snapshots__/test_engine_manifest/: test_get_engine_manifest_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/morphing/: test_morphable_targets.py  test_synthesis_morphing.py
apps/DaisukiTTS-engine/test/e2e/single_api/portal_page/__snapshots__/: test_get_root.ambr
apps/DaisukiTTS-engine/test/e2e/single_api/preset/__snapshots__/test_presets/: test_get_presets_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/setting/__snapshots__/: test_setting_api.ambr
apps/DaisukiTTS-engine/test/e2e/single_api/speaker/: test_singer_info.py  test_singers.py  test_speaker_info.py  test_speakers.py
apps/DaisukiTTS-engine/test/e2e/single_api/speaker/__snapshots__/test_speaker_info/: test_get_speaker_info_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/tts_pipeline/: test_accent_phrases.py  test_audio_query.py  test_cancellable_synthesis.py  test_frame_synthesis.py  test_initialize_speaker.py  test_is_initialized_speaker.py  test_mora_data.py  test_mora_length.py  test_mora_pitch.py  test_multi_synthesis.py  test_sing_frame_audio_query.py  test_sing_frame_f0.py  test_sing_frame_volume.py  test_synthesis.py
apps/DaisukiTTS-engine/test/e2e/single_api/tts_pipeline/__snapshots__/test_accent_phrases/: test_post_accent_phrases_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/tts_pipeline/__snapshots__/test_audio_query/: test_post_audio_query_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/tts_pipeline/__snapshots__/test_audio_query_from_preset/: test_post_audio_query_from_preset_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/tts_pipeline/__snapshots__/test_mora_data/: test_post_mora_data_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/user_dict/: test_import_user_dict.py
apps/DaisukiTTS-engine/test/e2e/single_api/user_dict/__snapshots__/test_import_user_dict/: test_post_import_user_dict_contents.json
apps/DaisukiTTS-engine/test/e2e/single_api/user_dict/__snapshots__/test_user_dict_api/: test_get_user_dict_200.json
apps/DaisukiTTS-engine/test/e2e/single_api/user_dict/__snapshots__/test_user_dict_word/: test_delete_user_dict_word_contents.json  test_put_user_dict_word_422.json  test_put_user_dict_word_contents.json
apps/DaisukiTTS-engine/test/unit/tts_pipeline/: test_text_analyzer.py  test_tts_engines.py  test_wave_synthesizer.py
apps/DaisukiTTS-engine/test/unit/tts_pipeline/__snapshots__/test_tts_engine/: test_mocked_create_accent_phrases_output.json  test_mocked_synthesize_wave_output.json
apps/DaisukiTTS-engine/test/unit/user_dict/: test_user_dict.py  test_user_dict_model.py  test_word_types.py
apps/DaisukiTTS-engine/tools/: check_release_build.py  create_venv_and_generate_licenses.bash  download_bert.py  generate_licenses.py  make_docs.py  modify_pyinstaller.bash
apps/DaisukiTTS-engine/tools/licenses/nvidia-ml-py/: LICENCE.txt
apps/DaisukiTTS-engine/voicevox_engine/: __init__.py  aivm_infos_repository.py  aivm_manager.py  engine_manifest.py  logging.py  model.py
apps/DaisukiTTS-engine/voicevox_engine/app/: application.py  dependencies.py  middlewares.py
apps/DaisukiTTS-engine/voicevox_engine/app/routers/: aivm_models.py  character.py  morphing.py  preset.py  tts_pipeline.py  user_dict.py
apps/DaisukiTTS-engine/voicevox_engine/core/: core_initializer.py
apps/DaisukiTTS-engine/voicevox_engine/metas/: Metas.py
apps/DaisukiTTS-engine/voicevox_engine/preset/: model.py
apps/DaisukiTTS-engine/voicevox_engine/setting/: model.py
apps/DaisukiTTS-engine/voicevox_engine/tts_pipeline/: model.py  mora_mapping.py  phoneme.py  style_bert_vits2_tts_engine.py  text_analyzer.py  tts_engine.py
apps/DaisukiTTS-engine/voicevox_engine/user_dict/: constants.py  model.py  user_dict_manager.py
apps/DaisukiTTS-engine/voicevox_engine/user_dict/dictionary/: COPYING  download.py  update.py
apps/DaisukiTTS-engine/voicevox_engine/utility/: path_utility.py  user_agent_utility.py
apps/GPT-SoVITS/: requirements.txt
apps/voicevox_engine/: requirements-build.txt  requirements-dev.txt  requirements.txt
assets/: __init__.py
dictionary/jieba/: COPYING  convert_to_jtalk.py  convert_to_lex_csv.py
docs/: reference.md
docs/g2pk4/: README.md
kabosu/: __init__.py  itaiji.py
sample_code/: asapy_demo.py  g2p_en_demo.py
test_bunkai/: test_cli.py
tests/: test_asari.py  test_main.py  test_mlask.py  test_oseti.py  test_pyopenjtalk-plus.py  test_yomikata.py
web_resource/: README_JA.md
(+437 files in other folders)
