[project]
name = "kabosu-core"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bunkai>=1.5.7",
    "datasets>=4.1.0",
    "fugashi[unidic-lite]>=1.5.1",
    "google-re2>=1.1.20250805",
    "huggingface-hub>=0.35.0",
    "ipadic==1.0.0",
    "jaconv>=0.4.0",
    "jpreprocess>=0.1.5",
    "jumandic==1.0.0",
    "kanalizer>=0.1.1",
    "marine-plus>=0.0.6.post3",
    "numpy<2",
    "nvidia-ml-py>=13.580.82",
    "onnxruntime>=1.22.1",
    "pandas>=1.5.2",
    "plac>=1.4.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "speach>=0.1a8",
    "streamlit==1.17.0",
    "sudachidict-core>=20250825",
    "sudachidict-full>=20250825",
    "sudachipy>=0.6.10",
    "torch>=2.8.0",
    "transformers==4.53.0",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest",
]
ko = [
    "google-re2>=1.1.20250805",
    "jamo>=0.4.1",
    "mecab-ko-dic",
    "nltk>=3.9.1",
]


[tool.hatch.build.targets.sdist]
only-include = [
    "src/kabosu_core",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]
[tool.hatch.build.targets.wheel]
packages = ["src/kabosu_core"]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
