[project]
name = "kabosu-core"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bunkai>=1.5.7",
    "dataclasses-json>=0.6.7",
    "datasets>=4.1.0",
    "distance>=0.1.3",
    "emoji>=2.15.0",
    "emojis>=0.7.0",
    "ginza>=5.2.0",
    "google-re2>=1.1.20250805",
    "huggingface-hub>=0.35.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "inflect>=7.5.0",
    "ja-ginza>=5.2.0",
    "jaconv>=0.4.0",
    "jamo>=0.4.1",
    "joblib>=1.5.2",
    "jpreprocess>=0.1.5",
    "kanalizer>=0.1.1",
    "marine-plus>=0.0.6.post3",
    "more-itertools>=10.8.0",
    "nltk>=3.9.2",
    "numpy<2",
    "nvidia-ml-py>=13.580.82",
    "onnxruntime>=1.22.1",
    "pandas>=1.5.2",
    "plac>=1.4.5",
    "pykakasi>=2.3.0",
    "regex>=2025.9.18",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "spacy>=3.8.7",
    "spans>=1.1.1",
    "speach>=0.1a8",
    "streamlit==1.17.0",
    "sudachidict-core>=20250825",
    "sudachidict-full>=20250825",
    "sudachipy>=0.6.10",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers==4.53.0",
    "vibrato>=0.2.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest",
    "torchmetrics>=1.8.2",
    "scikit-learn>=1.7.2",
    "docstr-coverage>=2.3.2",
    "tensorboard>=2.20.0",
    "matplotlib>=3.10.6",
    "pytest-cov>=7.0.0",
    "pysen>=0.11.0",
    "black>=25.9.0",
    "flake8<4",
    "flake8-bugbear>=23.3.12",
    "isort<5.2.0",
    "click<8.1.0",
]


[tool.hatch.build.targets.sdist]
only-include = [
    "src/kabosu_core",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]
[tool.hatch.build.targets.wheel]
packages = ["src/kabosu_core"]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
